Switch the Updaters to use COM STA Task Runners

On Windows, the background downloader uses the COM Global Interface
Table, and Chromium requires these instances to have COM explictly
initialized.

Using a COM STA TaskRunner works for this case.

BUG=739461

Change-Id: I28fdc54af5ec34034498d904bba648fc40c3c2f0
Reviewed-on: https://chromium-review.googlesource.com/562537
Reviewed-by: Joshua Pawlicki <waffles@chromium.org>
Reviewed-by: Sorin Jianu <sorin@chromium.org>
Reviewed-by: Devlin <rdevlin.cronin@chromium.org>
Commit-Queue: Robert Liao <robliao@chromium.org>
Cr-Commit-Position: refs/heads/master@{#485319}